Minor styling fixes (#398)
* Fix height of panel header and tabs to be same

* Fix dashboard logo having wrong font

* Remove border radius in side panels buttons and login

* Make panels 30px height instead 35px

* Fix scrollbars for firefox

--- a/src/components/login/style.less
+++ b/src/components/login/style.less
@@ -26,8 +26,10 @@
     cursor: pointer;
     &:hover {
         color: #E0E0E0;
-        border-color: @primary-color;
         background-color: @action-color-hover;
+    }
+    &.loggedIn:hover {
+        border-color: @primary-color;
     }
     .actionMenu {
         display: flex;
@@ -39,6 +41,7 @@
         align-content: center;
         align-items: center;
         padding: 0px 20px;
+        border-radius: 0px;
     }
     .caret {
         display: flex;
